# gensbp

./: .gitignore  README.md  README_EN.md  main.py  pyproject.toml
config-example/: config.json  dial-fields.json  extra.json  outbound-presets.json  outbound-rules.json  template.json
config-example/patch/: android.json  desktop.json  ios.json
config-example/unipatch/: dns.json  rule_set.json  rules.json
src/: __init__.py  __main__.py  cli.py
src/config/: constants.py  settings.py
src/core/: generator.py  latency.py  parser.py  patch.py  selector.py
src/core/patch/: __init__.py  apply.py  engine.py
src/utils/: cache.py  fs.py  logger.py
