[project]
name = "gensbp"
version = "0.1.0"
description = "Auto-generate sing-box configuration from node subscriptions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "windy"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
gensbp = "gensbp.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
